Created lesson on R markdown for week 1 lesson.

--- a/01-B-Rmarkdown-intro.Rmd
+++ b/01-B-Rmarkdown-intro.Rmd
@@ -5,14 +5,6 @@ author: Jes
 output: html_document
 ---
 
-The instructor will edit the header above to reflect the lesson content and add their and the student's names as authors. The instructor should also update the text below to give a link to the assigned reading:
-
-
-**Assigned Reading:**
-
-> Coyle, JR. 2017. *Intraspecific variation in functional traits reveals limited effects of microclimate on community assemble in temperatedeciduous oak canopies.* Oikos **126**: 111-120. DOI: [10.1111/oik.03239](http://dx.doi.org/10.1111/oik.03239)
-
-
 ```{r include = FALSE}
 # This code block sets up the r session when the page is rendered to html
 # include = FALSE means that it will not be included in the html document
@@ -29,66 +21,145 @@ knitr::opts_chunk$set(fig.path = "images/")
 # Set the web address where R will look for files from this repository
 # Do not change this address
 repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
+
+# A function that allows writing r inline verbatim
+rinline <- function(code) {
+  sprintf('``` `r %s` ```', code)
+}
 ```
 
-## Key Points
+### Key Points
 
-The instructor will fill in a description of the topic here followed by a bulleted list describing key features of the statistical analysis method. For example:
+* R markdown is text-based formatting that allows you to embed code and explanatory text in the same document.
+* R markdown documents consist of a header, code chunks and text.
+* R markdown files (.Rmd) can be rendered to other document formats (e.g. html, pdf, docx) to generate reports or web applications. 
+* Formatting analyses in R markdown keeps the entire research process in one document that can easily regenerate reports and output if the data are changed.
 
-* When to use this analysis
-* When *not* to use this analysis
+> **Suggested Reading:**
+>
+> Grolemund, G. 2014. *Introduction to R Markdown*. RStudio. http://rmarkdown.rstudio.com/articles_intro.html
 
-## Analysis Example
+### How we will use R markdown
 
-The student discussion leader will place their example code in this section, including text that describe the purpose of each code block.
+Our course website is a set of R markdown files that have been rendered to html files and are hosted on [GitHub Pages](https://pages.github.com/). You can find all of the pages that comprise our course website in [this GitHub repository](http://github.com/FukamiLab/BIO202). The main landing page is found in the file `index.html` which has been generated from the file `index.Rmd`. Each day of the class has a corresponding lesson webpage R markdown file named XX-Y-topic.Rmd, where XX is the week and Y is a letter corresponding to the day (A: Mon, B: Wed, C: Fri). Your job will be to edit the lesson webpage for the day that you sign up to lead class. We have provided an outline, but you will need to supply the example code and text describing what it does. 
 
-First you wil probably need to read in data. If you have uploaded the data file on the course GitHub repository in the data folder then you should be able to read in the data as follows by changing the name of the file after `data/`:
+We are requiring you to interact with the course website in this way because being able to document reproducible analyses is a valuable skill that is becoming nearly required for today's ecologists. As analyses become more complex and specialized, code review, in addition to open access to data, is likely to become a regular aspect of formal and informal scientific review. Documenting your analyses in R markdown with RStudio is a (relatively) painless way to ensure that you (and your reviewers) understand how you obtained and analyzed your data even after months of putting a project "on the back burner". Therefore, we hope that you will find this additional class requirement useful even as it introduces a bit more cognitive burden.
+
+You have two options for editing the content of the course webpage:
+
+1. Use git on your computer to interface with the files on GitHub.
+2. Download the .Rmd files from GitHub, edit them on your computer and email them to Jes.
+
+Today we will learn option 2 and there will be an optional session on Wednesday of Week 2 for anyone who wishes to learn how to use git for option 1. These two options are summarized on the [Editing the Course Website](file:///C:/Users/jrcoyle/Documents/Stanford/BIO202/GitHub/00-computer-setup.html#editing_the_course_website) section of the Computer Setup page on the course website.
+
+#### Downloading files from GitHub
+
+Go to the [course website GitHub repository](https://github.com/FukamiLab/BIO202). Notice that you can choose to download all of the files as a zip file by clicking the green "Clone or download" button in the upper right. You will only need to edit one (or a few) pages, so let's just download one file rather than the whole website. Click on the R markdown file corresponding to yesterday's lesson: `01-A-R-intro.Rmd`, then click the 'Raw' button that appears at the top right corner of the document viewer on the page that loads. This will take you to a page that displays the text in the file. Download the page as a .Rmd file (remove the .txt extension that your browser will attempt to append) and save it somewhere useful on your computer (e.g. the folder you have made for this class, not Downloads or Desktop). Find the file on your computer and open it. It should open in RStudio.
+
+> **Exercise:**
+>
+> Compare the contents of the .Rmd file to what you see on the course website.
+>
+> + What is the same?
+> + What is different?
 
 
-```{r results = 'hide'}
-# Read in a data file from the data folder on the BIO 202 GitHub repository
-dat <- read.csv(file.path(repo_url, "data/macrolichen_traits_Coyle_2016.csv"))
+### Structure of a Rmd document
 
-# Or, read in the data file from a folder on your computer
-# Remove # from the following 3 lines and change the file path assigned to my_dir
-# my_dir <- "/Path/to/your/working_directory"
-# setwd(my_dir)
-# dat <- read.csv("lichen_traits_Coyle_2016.csv")
-```
+R markdown files have three main pieces:
 
+1. A header that tells the program how to read the document.
+2. Text with markdown-style formatting.
+3. Code chunks that conduct the analysis.
 
-Next describe how you will manipulate the data in order to perform the anaylsis.
+> **Exercise:**
+> 
+> Find each of these three pieces in the Introduction to R lesson document.
 
-Include any relevant code below, making sure to include a `# comment` for each line.
+You will not need to edit the header for any of the course webpages, other than to add you name to the list of authors. Check out the following resources if you are interested in generating your own markdown documents from scratch and want to learn more about how to change the format of the output document:
+
++ [RStudio's lessons on using R markdown](http://rmarkdown.rstudio.com/lesson-1.html)
++ [Reference guide](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf)
++ Busy, but printable [cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf)
+
+#### Markdown-style text
+
+Markdown is a basic and readable way to format text that is used by many web platforms because it enables to easily make web-based content without writing html. Most importantly- it is a way to encode formatting directly into the text, which can then be interpretted into multiple different document formats. Markdown keeps documents text-based so that files are readable by both humans and machines.
+
+Here's [a quick lesson](https://guides.github.com/features/mastering-markdown/) on markdown from GitHub.
+
+> **Exercise:**
+> Look at the Introduction to R lesson .Rmd file and find examples of the following formatting:
+>
+> + a header (what controls the size of the header?)
+> + bold text and italic text
+> + a list
+> + a numbered list
+> + a webpage link
+> + text that links to a webpage
+> + text formatted as code that is not evaluated (verbatim code)
+
+R markdown also allows you to type latex-style mathematical formulas using `$ $` for inline text and `$$  $$` for for equations centered on their own lines. For example: `$$ E(X) = \sum_{i=1}^N x_i*p(x_i)$$` would display as: $$ E(X) = \sum_{i=1}^N x_i*p(x_i)$$
+
+#### Code chunks
+
+Code chunks perform the analysis. Code chunks begin with ` ```{} ` and end with ` ``` `. Any text inside the `{}` at the beginning of the chunk tells R how to evaluate and display the results of the code. Since we will be using R to evaluate our code, all of our code chunks will begin with: 
+` ```{r} `. You can name code chunks (to keep track of parts of an analysis) by typing a word after the `r`: ` ```{r chunk-name}` Any text that you place between the beginning and ending tags of a code chunk will be treated as plain R code. Code chunks are evaluated sequentially, so any objects that you create in a chunk will be available to the chunks that follow it.
+
+You can also evaluate R code within a paragraph of text (e.g. inline code). For example, suppose you know that you weigh 142 lbs, but want to report it in kg. If you had done the calculation in a code chunk:
 
 ```{r}
-# Subset the data to foliose lichens
-fol_dat <- subset(dat, Growth_form == 'foliose')
-
+my_lbs <- 142
+my_kg <- my_lbs * 0.45359237
 ```
 
+You could write: I weigh `r rinline("my_kg")` kg. Which would display: I weigh `r my_kg` kg. Or, for better formatting: I weigh `r rinline("round(my_kg, 1)")` kg. (Displays: I weigh `r round(my_kg, 1)` kg.) If you hadn't done the calculation in a code chunk you can also do calculation in the line: I weigh `r rinline("round(142*0.453, 1)")` kg.
 
-Describe the steps of the example analysis, including code blocks as needed. Describe the functions and packages used.
+### Conducting analyses in Rmd
 
-```{r chl_fig, echo = FALSE}
-# echo = FALSE means that the results of the code will be shown without the code.
-# chl_fig is a name that knit will use to name the figure generated by this code chunk
+You can treat R markdown files (almost) just like a regular R script. Any text that you highlight or line that you place your cursor on can be run by pressing Ctr+Enter or Cmd+Enter. You can also run an entire code chunk by pressing the green arrow that appears to the right of it.
 
-# Plot total chlorophyll vs. chlorophyll A:B ratio
-plot(Tot_chl_DW ~ Chla2b, data = fol_dat, 
-     las=1, 
-     ylab = 'Tot. CHL',
-     xlab = 'CHL A:B'
-)
+If you click the 'Run' button at the top of the document you can choose to run all code chunks in the document (or just those above or below your cursor).
 
-```
-
-**Figure 1. Total chlorophyll versus ratio of chlorophyll A to B.** Looks like we have some data cleaning to do! 
+> **Exercise:**
+>
+> Run a line of code in the Introduction to R Rmd file. What happens in the Console window? What happens in the Environment window?
+>
+> Now try running a line of text from this document. What happens?
+>
+> What happens when you use the 'Run' button to run all code chunks in the document? 
 
 
-## Discussion Questions
+### Rendering Rmd to html
 
-Include any questions or issues here that you want to discuss or ask about in class. After the class session, update this section with any important notes discussed.
+When you are finished with an analysis (or even if you are only part-way through) you can convert your Rmd file to another file format to generate a report. This process is called *rendering* and we will be rendering all of our Rmd files to html so that they can display as webpages on our course website. For your project, you may want to render your analysis to a slide show (beamer) or pdf or word document.
+
+Documents written in R markdown are rendered to other document formats by the `rmarkdown` package that comes automatically installed with RStudio. The rmarkdown package renders documents using two steps: First, it excutes all of the code using functions from the `knitr` package. Then, it converts the output of the code and any markdown-formatted text to a new document format using functions in the `pandoc` package. Note that any output that you generate in the code chunks (e.g. plots, exported data) will be saved relative to the working directory, unless you specify otherwise in a code chunk option.
+
+To render an Rmd document in Rstudio, click the 'Knit' button at the top of the window displaying the document. If everything goes right a new window should pop up showing the new file that was generated (or prompt you to open the file in a browwer window). The file will be saved in the directory where the Rmd file is located.
+
+> **Exercise:**
+> 
+> 1. Render the Introduction to R Rmd file to an html file in RStudio by clicking the Knit button.
+> 2. Use your file browser to locate the html file that was generated. Open it with your browser- what do you see? How does it differ from what is displayed [on the course website](https://fukamilab.github.io/BIO202/01-A-R-intro.html)?
+> 3. Now open the html file with a text editor (emacs, notepad). What do you see?
+
+#### Code chunk options
+
+The way that pandoc displays the contents and output of code chunks is determined by the *options* that you set. These can be set for all code chunks in the document (*global* options) or for each chunk individually.
+
+This [reference guide](https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf) has a good overview of what the different options will do.
+
+Look at the first code chunk in the Introduction to R Rmd document where the global options are set. This code block demonstrates 3 global options that apply to all following code chunks in the document: `knitr::opts_chunk$set()`. It also shows how you would apply an options to a single code chunk in the brackets at the start of the chunk: `{r include = FALSE}`, so that this chunk is not shown in the resulting html document, even though it is evaluated.
+
+#### Figures
+
+Any figure that you make in a code chunk will by default be saved as separate files in your working directory and then imported into the final document created by `pandoc`. In our class webpages, the first code chunk specifies: `knitr::opts_chunk$set(fig.path = "images/")`, which tells `knitr` that it should save any figures generated with code chunks to a folder named "images" within the working directory. The image files will be named according the the name of the code chunk from which they are generated. Hence, it is a good idea to separate analyses into separate code chunks and give them somewhat descriptive names. R markdown can also automatically number and caption your figures and tables. The [`captioner`](https://cran.r-project.org/web/packages/captioner/vignettes/using_captioner.html) package is particularly useful for this.
 
 
-
+> **Exercise:**
+>
+> 1. Download the 00-example-lesson.Rmd file from the course website GitHub repository.
+> 2. Try to render the .Rmd file to html. Why didn't it work? Try to fix the problem.
+> 3. Add a new section to the document with markdown-formatted text and a new R code chunk. Render the document again.
+> 4. Open the html file with your web browser to see what your changes would look like online. How does what you see differ from what is shown at https://fukamilab.github.io/BIO202/00-example-lesson.html
