--- a/index.Rmd
+++ b/index.Rmd
@@ -33,9 +33,9 @@ Each student will complete the results section to include in a paper to submit f
 | Week | Day | Date     | Topic & Reading                                                                   | Summary   | Discussion |
 |------|-----|----------|-----------------------------------------------------------------------------------|-----------|------------|
 | 1    | Mon | Sept. 25 | [Intro to R & RStudio](01-A-R-intro.html)                                         | Tad & Jes |------------|
-|      | Wed | Sept. 27 | Topic selection, [Intro to R markdown](01-B-Rmarkdown-intro.html) & class website | Tad & Jes |------------|
-|      | Fri | Sept. 29 | [Intro to ggplot2](01-C-ggplot2-into.html)                                        | Jes       |------------|
-| 2    | Mon | Oct. 2   | [R workshop](02-A-R-workshop.html) (optional)                                     | Jes       |------------|
+|      | Wed | Sept. 27 | Topic selection, [Intro to R markdown](01-B-Rmarkdown-intro.html) & class website | Tad & Jes |------------| 
+|      | Fri | Sept. 29 | [R workshop](01-C-R-workshop.html) (optional)                                     | Jes       |------------|
+| 2    | Mon | Oct. 2   | [Intro to ggplot2 and tidyr](02-A-tidyr.html) (optional)                          | Jes       |------------|
 |      | Wed | Oct. 4   | [Intro to GitHub & git](02-B-git-intro.html) (optional)                           | Jes       |------------|
 |      | Fri | Oct. 6   | Each person introduces their questions & data                                     | Tad & Jes |------------|
 | 3    | Mon | Oct. 9   | Topic 1. [Data exploration](03-A-data-exploration.html)                           | Tad       |            |
@@ -89,7 +89,7 @@ All assigned readings can be obtained for free through Stanford library online r
 + Zuur, A. F., Leno, E. N., Walker, N., Savliev, A. A. and Smith, G. M. (2009), *Mixed Effect Models and Extensions in Ecology with R.* Springer. [Stanford Full Text](https://link.springer.com/book/10.1007%2F978-0-387-87458-6)
 + Zuur, A. F. (2010), *A protocol for data exploration to avoid common statistical problems.* Methods in Ecology and Evolution **1**: 3-14. DOI: [10.1111/j.2041-210X.2009.00001.x](http://dx.doi.org/10.1111/j.2041-210X.2009.00001.x)
 
-### Addional Suggested References
+### Additional Suggested References
 
 + Legendre, P. and L. Legendre. (2012), *Numerical Ecology*. Elsevier. [Stanford Full Text](http://www.sciencedirect.com/science/bookseries/01678892/24)
 + McElreath, R. (2016), *Statistical rethinking: a Bayesian course with examples in R and Stan*. CRC Press. *Available in the Science and Marine libraries* [Author's website](http://xcelab.net/rm/statistical-rethinking/)
